--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -35,3 +35,36 @@ margin: 25px;
 .card-img-top{
 height: 250px;
 }
+
+
+
+.buttona {
+    border: 5;
+    border-bottom-color: black;
+    color: white;
+    padding: 16px 32px;  
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-align: center;
+    
+  }
+ .buttona2 {
+    border: 5;
+    border-bottom-color: black;
+    color: white;
+    padding: 16px 32px;  
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-align: center;
+    
+  }
