--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,9 +105,9 @@
 			<div class="page_menu_content">
 							
 				<div class="page_menu_search menu_mm">
-					<form action="#">
-						<input type="search" required="required" class="page_menu_search_input menu_mm" placeholder="Search for products...">
-					</form>
+					<!-- <form id="filter">
+						<input type="text" name="term" [(ngModel)]="term" />
+					</form> -->
 				</div>
 				<ul class="page_menu_nav menu_mm">
 					<li class="page_menu_item has-children menu_mm">
@@ -148,7 +148,7 @@
 		</div>
 	</div>
 	
-<router-outlet></router-outlet>
+ <router-outlet></router-outlet>
 
 	<!-- Footer -->
 	
