--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -45,22 +45,8 @@
                             <div class="contact_info_section">
                                 <div class="contact_info_title">Marketing</div>
                                 <ul>
-                                    <li>Phone: <span>+53 345 7953 3245</span></li>
-                                    <li>Email: <span>yourmail@gmail.com</span></li>
-                                </ul>
-                            </div>
-                            <div class="contact_info_section">
-                                <div class="contact_info_title">Shippiing & Returns</div>
-                                <ul>
-                                    <li>Phone: <span>+53 345 7953 3245</span></li>
-                                    <li>Email: <span>yourmail@gmail.com</span></li>
-                                </ul>
-                            </div>
-                            <div class="contact_info_section">
-                                <div class="contact_info_title">Information</div>
-                                <ul>
-                                    <li>Phone: <span>+53 345 7953 3245</span></li>
-                                    <li>Email: <span>yourmail@gmail.com</span></li>
+                                    <li>Phone: <span>+2162554881</span></li>
+                                    <li>Email: <span>ticchalloufomar@gmail.com</span></li>
                                 </ul>
                             </div>
                         </div>
