--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -17,22 +17,54 @@
   </span>
 
 </ul>-->
-<div class="row"  >
-  
-  <div class="col-lg-3 ml-5 mt-2" *ngFor="let product of category">
+<span *ngIf="category">
+    <ul class="list">
+        <li *ngFor="let product of category" class="list-item">
+    <div>
+        <article class="card">
+            <header class="card__thumb">
+                <a href="#"><img src="{{product.pathUrlImage}}"/></a>
+            </header>
+    
+            <div class="card__body">
+    
+    
+                <h2 class="card__title"><a href="#">{{product.name}}</a> </h2>
+              
+                <span *ngIf="product.disponible=='1';then thenBlock else elseBlock"></span>
+                <ng-template #thenBlock ><span style="color:green"> In Stock </span></ng-template>
+                <ng-template #elseBlock><span style="color:red"> Out of the stock </span></ng-template>
+                    
+                    
+                
+                <div class="card__subtitle">{{product.prix}} TND</div>
+                <div class="card__description">
+                <p> {{product.description}}</p>
+                <a class="btn" >Add to cart</a>
+              </div>
+            </div>
 
-      <div class="card ml-5" style="width: 18rem;">
-      <img class="card-img-top" src="{{product.pathUrlImage}}" alt="Card image cap">
-      <div class="card-body">
-       <h5 class="card-title">{{product.name}}</h5>
-  <p class="card-text "> {{product.description}}</p>
- <br/>   
- <p style="color:red;">Price:{{product.prix}} DT</p>
-  <button
-  (click) ="addToCart()"
-  class="btn btn-primary">acheter</button>
-</div>
-</div>
-</div>
+        </article>
+    </div>
+    </li>
+    </ul>
+    
 
-</div>
+
+
+
+
+
+
+
+
+
+
+  <!-- <div class="container" style="margin-top:50px;margin-bottom: 50px">
+    <div class="row">
+        <div class="col-md-3 mb-5" *ngFor="let product of products ">
+            <a [routerLink]="['/products/', product.id]"><img class="img-responsive" src="{{product.pathUrlImage}}" width="250px" alt="Card image cap"></a>
+        </div>
+      </div>
+  </div> -->
+</span>
