--- a/src/app/components/products-detail/products-detail.component.html
+++ b/src/app/components/products-detail/products-detail.component.html
@@ -7,7 +7,7 @@
           <!-- Product Image -->
           <div class="col-lg-6">
             <div class="details_image">
-              <div class="details_image_large"><img src="../../assets/images/details_1.jpg" alt=""><div class="product_extra product_new"><a href="categories.html">New</a></div></div>
+              <div class="details_image_large"><img src="{{product.pathUrlImage}}" alt=""><div class="product_extra product_new"><a href="categories.html">New</a></div></div>
               <div class="details_image_thumbnails d-flex flex-row align-items-start justify-content-between">
                 <div class="details_image_thumbnail active" data-image="../../assets/images/details_1.jpg"><img src="../../assets/images/details_1.jpg" alt=""></div>
                 <div class="details_image_thumbnail" data-image="../../assets/images/details_2.jpg"><img src="../../assets/images/details_2.jpg" alt=""></div>
@@ -21,19 +21,19 @@
           <div class="col-lg-6">
             <div class="details_content">
               <div class="details_name">{{ product.name }}</div>
-              <div class="details_discount">{{product.prix}}</div>
-              <div class="details_price">$670</div>
+              <div class="details_price  "style="">{{product.prix}}</div><br/>
+              <div class="details_discount">670 TND</div>
   
               <!-- In Stock -->
               <div class="in_stock_container">
                 <div class="availability">Availability:</div>
                 <span *ngIf="product.disponible=='1';then thenBlock else elseBlock"></span>
                 <ng-template #thenBlock ><span style="color:green"> Stock </span></ng-template>
-                <ng-template #elseBlock><span style="color:red"> Out of the stock </span>out of Stock</ng-template>
+                <ng-template #elseBlock><span style="color:red"> Out of the stock </span></ng-template>
                 
               </div>
               <div class="details_text">
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Phasellus id nisi quis justo tempus mollis sed et dui. In hac habitasse platea dictumst. Suspendisse ultrices mauris diam. Nullam sed aliquet elit. Mauris consequat nisi ut mauris efficitur lacinia.</p>
+                <p>{{product.description}}</p>
               </div>
   
               <!-- Product Quantity -->
@@ -46,7 +46,8 @@
                     <div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
                   </div>
                 </div>
-                <div class="button cart_button"><a href="#">Add to cart</a></div>
+                <div ><button class="button cart_button mb-5 " type="button"  (click)="addToCart(product)
+                  ">Add to cart</button></div>
               </div>
   
               <!-- Share -->
@@ -63,17 +64,7 @@
           </div>
         </div>
   
-        <div class="row description_row">
-          <div class="col">
-            <div class="description_title_container">
-              <div class="description_title">Description</div>
-              <div class="reviews_title"><a href="#">Reviews <span>(1)</span></a></div>
-            </div>
-            <div class="description_text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Phasellus id nisi quis justo tempus mollis sed et dui. In hac habitasse platea dictumst. Suspendisse ultrices mauris diam. Nullam sed aliquet elit. Mauris consequat nisi ut mauris efficitur lacinia.</p>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   
